# nyt-news

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt
app/: page.tsx  test.txt
app/auth/login/: page.tsx
app/auth/register/: page.tsx
app/auth/signup/: page.tsx
app/components/: newsTile.tsx
app/home/: page.tsx
app/home_page/: page.tsx
app/hooks/: index.ts  use-login.tsx  use-news.ts  use-verify.ts
app/profile/: page.tsx
backend/: package.json
backend/src/: index.js
backend/src/controllers/: auth.controller.js
backend/src/lib/: db.js  utils.js
backend/src/middleware/: auth.middleware.js
backend/src/models/: user.model.js
backend/src/routes/: auth.route.js
components/: feedTray.tsx
components/forms/: Form.tsx  Input.tsx  LoginForm.tsx  SignUpForm.tsx  index.ts
components/nav/: navbar.tsx
components/news/: feedTray.tsx
components/newsItem/: feedTray.tsx  newsTile.tsx
frontend/: next.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/redux/: store.ts
hooks/: index.ts  use-login.ts  use-news.ts  use-signup.ts  use-verify.ts
my-app/: package-lock.json
my-app/app/: page.js
nextjs-flask/: .gitignore  next.config.js  package-lock.json  package.json  vercel.json
nextjs-flask/api/: index.py  pyproject.toml  requirements.txt
nextjs-flask/api/cache/: news_cache.json
nextjs-flask/app/: layout.tsx  page.tsx
nextjs-flask/news-app-lambda/: lambda_function.py
redux/features/: authApiSlice.ts  authSlice.ts
server/: app.py
(+25 files in other folders)
